[tool.poetry]
name = "RAT"
version = "0.1.0"
description = ""
authors = ["Roman Nesytov <rn@zvuk.team>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
aio_pika = "^6.7.0"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest-asyncio = "^0.14.0"
ipdb = "^0.13.3"
pytest-freezegun = "^0.4.2"
docker = "^4.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
